src/main/java/com/stackleader/drools/netbeans/grammar/DroolsRuleParser.java
// $ANTLR 3.5.1 /home/dcnorris/Documents/DroolsRule.g 2016-12-12 16:26:54
package com.stackleader.drools.netbeans.grammar;

import org.antlr.runtime.*;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

@SuppressWarnings("all")
public class DroolsRuleParser extends Parser {

    public static final String[] tokenNames = new String[]{
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BINDING", "CHAR", "COLON", "DECLARE",
        "DIALECT", "END", "ESC_SEQ", "EXPONENT", "EXTENDS", "FLOAT", "FQN", "GLOBAL",
        "HEX_DIGIT", "ID", "IMPORT", "INT", "KEYWORD", "META", "METHOD", "MULTILINE_COMMENT",
        "OCTAL_ESC", "OPERATOR", "PACKAGE", "PRIMITIVE", "RULE", "SALIENCE", "SEMICOLON",
        "SEPARATOR", "SINGLELINE_COMMENT", "STRING", "THEN", "UNICODE_ESC", "WHEN",
        "WS"
    };
    public static final int EOF = -1;
    public static final int BINDING = 4;
    public static final int CHAR = 5;
    public static final int COLON = 6;
    public static final int DECLARE = 7;
    public static final int DIALECT = 8;
    public static final int END = 9;
    public static final int ESC_SEQ = 10;
    public static final int EXPONENT = 11;
    public static final int EXTENDS = 12;
    public static final int FLOAT = 13;
    public static final int FQN = 14;
    public static final int GLOBAL = 15;
    public static final int HEX_DIGIT = 16;
    public static final int ID = 17;
    public static final int IMPORT = 18;
    public static final int INT = 19;
    public static final int KEYWORD = 20;
    public static final int META = 21;
    public static final int METHOD = 22;
    public static final int MULTILINE_COMMENT = 23;
    public static final int OCTAL_ESC = 24;
    public static final int OPERATOR = 25;
    public static final int PACKAGE = 26;
    public static final int PRIMITIVE = 27;
    public static final int RULE = 28;
    public static final int SALIENCE = 29;
    public static final int SEMICOLON = 30;
    public static final int SEPARATOR = 31;
    public static final int SINGLELINE_COMMENT = 32;
    public static final int STRING = 33;
    public static final int THEN = 34;
    public static final int UNICODE_ESC = 35;
    public static final int WHEN = 36;
    public static final int WS = 37;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[]{};
    }

    // delegators
    public DroolsRuleParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public DroolsRuleParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[40 + 1];

    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    @Override
    public String[] getTokenNames() {
        return DroolsRuleParser.tokenNames;
    }

    @Override
    public String getGrammarFileName() {
        return "/home/dcnorris/Documents/DroolsRule.g";
    }

    @Override
    public void emitErrorMessage(String msg) {
    }

    public static class program_return extends ParserRuleReturnScope {

        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "program"
    // /home/dcnorris/Documents/DroolsRule.g:54:1: program : ( declaration )* ( WS )* ;
    public final DroolsRuleParser.program_return program() throws RecognitionException {
        DroolsRuleParser.program_return retval = new DroolsRuleParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();

        Object root_0 = null;

        Token WS2 = null;
        ParserRuleReturnScope declaration1 = null;

        Object WS2_tree = null;

        try {
            if (state.backtracking > 0 && alreadyParsedRule(input, 1)) {
                return retval;
            }

            // /home/dcnorris/Documents/DroolsRule.g:55:2: ( ( declaration )* ( WS )* )
            // /home/dcnorris/Documents/DroolsRule.g:55:4: ( declaration )* ( WS )*
            {
                root_0 = (Object) adaptor.nil();

                // /home/dcnorris/Documents/DroolsRule.g:55:4: ( declaration )*
                loop1:
                while (true) {
                    int alt1 = 2;
                    alt1 = dfa1.predict(input);
                    switch (alt1) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:55:4: declaration
                        {
                            pushFollow(FOLLOW_declaration_in_program66);
                            declaration1 = declaration();
                            state._fsp--;
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                adaptor.addChild(root_0, declaration1.getTree());
                            }

                        }
                        break;

                        default:
                            break loop1;
                    }
                }

                // /home/dcnorris/Documents/DroolsRule.g:55:17: ( WS )*
                loop2:
                while (true) {
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);
                    if ((LA2_0 == WS)) {
                        alt2 = 1;
                    }

                    switch (alt2) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:55:17: WS
                        {
                            WS2 = (Token) match(input, WS, FOLLOW_WS_in_program69);
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                WS2_tree = (Object) adaptor.create(WS2);
                                adaptor.addChild(root_0, WS2_tree);
                            }

                        }
                        break;

                        default:
                            break loop2;
                    }
                }

            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {
                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
            if (state.backtracking > 0) {
                memoize(input, 1, program_StartIndex);
            }

        }
        return retval;
    }
    // $ANTLR end "program"

    public static class declaration_return extends ParserRuleReturnScope {

        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "declaration"
    // /home/dcnorris/Documents/DroolsRule.g:58:1: declaration : ( WS !)* ( packageDeclaration | importDeclaration | globalDeclaration | dialectDeclaration | typeDeclaration | ruleDeclaration ) ( WS !)* ( SEMICOLON )? ;
    public final DroolsRuleParser.declaration_return declaration() throws RecognitionException {
        DroolsRuleParser.declaration_return retval = new DroolsRuleParser.declaration_return();
        retval.start = input.LT(1);
        int declaration_StartIndex = input.index();

        Object root_0 = null;

        Token WS3 = null;
        Token WS10 = null;
        Token SEMICOLON11 = null;
        ParserRuleReturnScope packageDeclaration4 = null;
        ParserRuleReturnScope importDeclaration5 = null;
        ParserRuleReturnScope globalDeclaration6 = null;
        ParserRuleReturnScope dialectDeclaration7 = null;
        ParserRuleReturnScope typeDeclaration8 = null;
        ParserRuleReturnScope ruleDeclaration9 = null;

        Object WS3_tree = null;
        Object WS10_tree = null;
        Object SEMICOLON11_tree = null;

        try {
            if (state.backtracking > 0 && alreadyParsedRule(input, 2)) {
                return retval;
            }

            // /home/dcnorris/Documents/DroolsRule.g:59:2: ( ( WS !)* ( packageDeclaration | importDeclaration | globalDeclaration | dialectDeclaration | typeDeclaration | ruleDeclaration ) ( WS !)* ( SEMICOLON )? )
            // /home/dcnorris/Documents/DroolsRule.g:59:4: ( WS !)* ( packageDeclaration | importDeclaration | globalDeclaration | dialectDeclaration | typeDeclaration | ruleDeclaration ) ( WS !)* ( SEMICOLON )?
            {
                root_0 = (Object) adaptor.nil();

                // /home/dcnorris/Documents/DroolsRule.g:59:6: ( WS !)*
                loop3:
                while (true) {
                    int alt3 = 2;
                    int LA3_0 = input.LA(1);
                    if ((LA3_0 == WS)) {
                        alt3 = 1;
                    }

                    switch (alt3) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:59:6: WS !
                        {
                            WS3 = (Token) match(input, WS, FOLLOW_WS_in_declaration82);
                            if (state.failed) {
                                return retval;
                            }
                        }
                        break;

                        default:
                            break loop3;
                    }
                }

                // /home/dcnorris/Documents/DroolsRule.g:60:3: ( packageDeclaration | importDeclaration | globalDeclaration | dialectDeclaration | typeDeclaration | ruleDeclaration )
                int alt4 = 6;
                switch (input.LA(1)) {
                    case PACKAGE: {
                        alt4 = 1;
                    }
                    break;
                    case IMPORT: {
                        alt4 = 2;
                    }
                    break;
                    case GLOBAL: {
                        alt4 = 3;
                    }
                    break;
                    case DIALECT: {
                        alt4 = 4;
                    }
                    break;
                    case DECLARE: {
                        alt4 = 5;
                    }
                    break;
                    case RULE: {
                        alt4 = 6;
                    }
                    break;
                    default:
                        if (state.backtracking > 0) {
                            state.failed = true;
                            return retval;
                        }
                        NoViableAltException nvae
                                = new NoViableAltException("", 4, 0, input);
                        throw nvae;
                }
                switch (alt4) {
                    case 1: // /home/dcnorris/Documents/DroolsRule.g:60:5: packageDeclaration
                    {
                        pushFollow(FOLLOW_packageDeclaration_in_declaration90);
                        packageDeclaration4 = packageDeclaration();
                        state._fsp--;
                        if (state.failed) {
                            return retval;
                        }
                        if (state.backtracking == 0) {
                            adaptor.addChild(root_0, packageDeclaration4.getTree());
                        }

                    }
                    break;
                    case 2: // /home/dcnorris/Documents/DroolsRule.g:60:26: importDeclaration
                    {
                        pushFollow(FOLLOW_importDeclaration_in_declaration94);
                        importDeclaration5 = importDeclaration();
                        state._fsp--;
                        if (state.failed) {
                            return retval;
                        }
                        if (state.backtracking == 0) {
                            adaptor.addChild(root_0, importDeclaration5.getTree());
                        }

                    }
                    break;
                    case 3: // /home/dcnorris/Documents/DroolsRule.g:60:46: globalDeclaration
                    {
                        pushFollow(FOLLOW_globalDeclaration_in_declaration98);
                        globalDeclaration6 = globalDeclaration();
                        state._fsp--;
                        if (state.failed) {
                            return retval;
                        }
                        if (state.backtracking == 0) {
                            adaptor.addChild(root_0, globalDeclaration6.getTree());
                        }

                    }
                    break;
                    case 4: // /home/dcnorris/Documents/DroolsRule.g:60:66: dialectDeclaration
                    {
                        pushFollow(FOLLOW_dialectDeclaration_in_declaration102);
                        dialectDeclaration7 = dialectDeclaration();
                        state._fsp--;
                        if (state.failed) {
                            return retval;
                        }
                        if (state.backtracking == 0) {
                            adaptor.addChild(root_0, dialectDeclaration7.getTree());
                        }

                    }
                    break;
                    case 5: // /home/dcnorris/Documents/DroolsRule.g:60:87: typeDeclaration
                    {
                        pushFollow(FOLLOW_typeDeclaration_in_declaration106);
                        typeDeclaration8 = typeDeclaration();
                        state._fsp--;
                        if (state.failed) {
                            return retval;
                        }
                        if (state.backtracking == 0) {
                            adaptor.addChild(root_0, typeDeclaration8.getTree());
                        }

                    }
                    break;
                    case 6: // /home/dcnorris/Documents/DroolsRule.g:60:105: ruleDeclaration
                    {
                        pushFollow(FOLLOW_ruleDeclaration_in_declaration110);
                        ruleDeclaration9 = ruleDeclaration();
                        state._fsp--;
                        if (state.failed) {
                            return retval;
                        }
                        if (state.backtracking == 0) {
                            adaptor.addChild(root_0, ruleDeclaration9.getTree());
                        }

                    }
                    break;

                }

                // /home/dcnorris/Documents/DroolsRule.g:61:5: ( WS !)*
                loop5:
                while (true) {
                    int alt5 = 2;
                    int LA5_0 = input.LA(1);
                    if ((LA5_0 == WS)) {
                        int LA5_2 = input.LA(2);
                        if ((synpred9_DroolsRule())) {
                            alt5 = 1;
                        }

                    }

                    switch (alt5) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:61:5: WS !
                        {
                            WS10 = (Token) match(input, WS, FOLLOW_WS_in_declaration116);
                            if (state.failed) {
                                return retval;
                            }
                        }
                        break;

                        default:
                            break loop5;
                    }
                }

                // /home/dcnorris/Documents/DroolsRule.g:61:8: ( SEMICOLON )?
                int alt6 = 2;
                int LA6_0 = input.LA(1);
                if ((LA6_0 == SEMICOLON)) {
                    alt6 = 1;
                }
                switch (alt6) {
                    case 1: // /home/dcnorris/Documents/DroolsRule.g:61:8: SEMICOLON
                    {
                        SEMICOLON11 = (Token) match(input, SEMICOLON, FOLLOW_SEMICOLON_in_declaration120);
                        if (state.failed) {
                            return retval;
                        }
                        if (state.backtracking == 0) {
                            SEMICOLON11_tree = (Object) adaptor.create(SEMICOLON11);
                            adaptor.addChild(root_0, SEMICOLON11_tree);
                        }

                    }
                    break;

                }

            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {
                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
            if (state.backtracking > 0) {
                memoize(input, 2, declaration_StartIndex);
            }

        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class packageDeclaration_return extends ParserRuleReturnScope {

        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "packageDeclaration"
    // /home/dcnorris/Documents/DroolsRule.g:64:1: packageDeclaration : PACKAGE ( WS !)+ FQN ;
    public final DroolsRuleParser.packageDeclaration_return packageDeclaration() throws RecognitionException {
        DroolsRuleParser.packageDeclaration_return retval = new DroolsRuleParser.packageDeclaration_return();
        retval.start = input.LT(1);
        int packageDeclaration_StartIndex = input.index();

        Object root_0 = null;

        Token PACKAGE12 = null;
        Token WS13 = null;
        Token FQN14 = null;

        Object PACKAGE12_tree = null;
        Object WS13_tree = null;
        Object FQN14_tree = null;

        try {
            if (state.backtracking > 0 && alreadyParsedRule(input, 3)) {
                return retval;
            }

            // /home/dcnorris/Documents/DroolsRule.g:65:2: ( PACKAGE ( WS !)+ FQN )
            // /home/dcnorris/Documents/DroolsRule.g:65:5: PACKAGE ( WS !)+ FQN
            {
                root_0 = (Object) adaptor.nil();

                PACKAGE12 = (Token) match(input, PACKAGE, FOLLOW_PACKAGE_in_packageDeclaration133);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    PACKAGE12_tree = (Object) adaptor.create(PACKAGE12);
                    adaptor.addChild(root_0, PACKAGE12_tree);
                }

                // /home/dcnorris/Documents/DroolsRule.g:65:15: ( WS !)+
                int cnt7 = 0;
                loop7:
                while (true) {
                    int alt7 = 2;
                    int LA7_0 = input.LA(1);
                    if ((LA7_0 == WS)) {
                        alt7 = 1;
                    }

                    switch (alt7) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:65:15: WS !
                        {
                            WS13 = (Token) match(input, WS, FOLLOW_WS_in_packageDeclaration135);
                            if (state.failed) {
                                return retval;
                            }
                        }
                        break;

                        default:
                            if (cnt7 >= 1) {
                                break loop7;
                            }
                            if (state.backtracking > 0) {
                                state.failed = true;
                                return retval;
                            }
                            EarlyExitException eee = new EarlyExitException(7, input);
                            throw eee;
                    }
                    cnt7++;
                }

                FQN14 = (Token) match(input, FQN, FOLLOW_FQN_in_packageDeclaration139);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    FQN14_tree = (Object) adaptor.create(FQN14);
                    adaptor.addChild(root_0, FQN14_tree);
                }

            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {
                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
            if (state.backtracking > 0) {
                memoize(input, 3, packageDeclaration_StartIndex);
            }

        }
        return retval;
    }
    // $ANTLR end "packageDeclaration"

    public static class dialectDeclaration_return extends ParserRuleReturnScope {

        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "dialectDeclaration"
    // /home/dcnorris/Documents/DroolsRule.g:68:1: dialectDeclaration : DIALECT ( WS !)+ STRING ;
    public final DroolsRuleParser.dialectDeclaration_return dialectDeclaration() throws RecognitionException {
        DroolsRuleParser.dialectDeclaration_return retval = new DroolsRuleParser.dialectDeclaration_return();
        retval.start = input.LT(1);
        int dialectDeclaration_StartIndex = input.index();

        Object root_0 = null;

        Token DIALECT15 = null;
        Token WS16 = null;
        Token STRING17 = null;

        Object DIALECT15_tree = null;
        Object WS16_tree = null;
        Object STRING17_tree = null;

        try {
            if (state.backtracking > 0 && alreadyParsedRule(input, 4)) {
                return retval;
            }

            // /home/dcnorris/Documents/DroolsRule.g:69:2: ( DIALECT ( WS !)+ STRING )
            // /home/dcnorris/Documents/DroolsRule.g:69:4: DIALECT ( WS !)+ STRING
            {
                root_0 = (Object) adaptor.nil();

                DIALECT15 = (Token) match(input, DIALECT, FOLLOW_DIALECT_in_dialectDeclaration152);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    DIALECT15_tree = (Object) adaptor.create(DIALECT15);
                    adaptor.addChild(root_0, DIALECT15_tree);
                }

                // /home/dcnorris/Documents/DroolsRule.g:69:14: ( WS !)+
                int cnt8 = 0;
                loop8:
                while (true) {
                    int alt8 = 2;
                    int LA8_0 = input.LA(1);
                    if ((LA8_0 == WS)) {
                        alt8 = 1;
                    }

                    switch (alt8) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:69:14: WS !
                        {
                            WS16 = (Token) match(input, WS, FOLLOW_WS_in_dialectDeclaration154);
                            if (state.failed) {
                                return retval;
                            }
                        }
                        break;

                        default:
                            if (cnt8 >= 1) {
                                break loop8;
                            }
                            if (state.backtracking > 0) {
                                state.failed = true;
                                return retval;
                            }
                            EarlyExitException eee = new EarlyExitException(8, input);
                            throw eee;
                    }
                    cnt8++;
                }

                STRING17 = (Token) match(input, STRING, FOLLOW_STRING_in_dialectDeclaration158);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    STRING17_tree = (Object) adaptor.create(STRING17);
                    adaptor.addChild(root_0, STRING17_tree);
                }

            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {
                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
            if (state.backtracking > 0) {
                memoize(input, 4, dialectDeclaration_StartIndex);
            }

        }
        return retval;
    }
    // $ANTLR end "dialectDeclaration"

    public static class importDeclaration_return extends ParserRuleReturnScope {

        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "importDeclaration"
    // /home/dcnorris/Documents/DroolsRule.g:72:1: importDeclaration : IMPORT ( WS !)+ FQN ;
    public final DroolsRuleParser.importDeclaration_return importDeclaration() throws RecognitionException {
        DroolsRuleParser.importDeclaration_return retval = new DroolsRuleParser.importDeclaration_return();
        retval.start = input.LT(1);
        int importDeclaration_StartIndex = input.index();

        Object root_0 = null;

        Token IMPORT18 = null;
        Token WS19 = null;
        Token FQN20 = null;

        Object IMPORT18_tree = null;
        Object WS19_tree = null;
        Object FQN20_tree = null;

        try {
            if (state.backtracking > 0 && alreadyParsedRule(input, 5)) {
                return retval;
            }

            // /home/dcnorris/Documents/DroolsRule.g:73:2: ( IMPORT ( WS !)+ FQN )
            // /home/dcnorris/Documents/DroolsRule.g:73:4: IMPORT ( WS !)+ FQN
            {
                root_0 = (Object) adaptor.nil();

                IMPORT18 = (Token) match(input, IMPORT, FOLLOW_IMPORT_in_importDeclaration170);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    IMPORT18_tree = (Object) adaptor.create(IMPORT18);
                    adaptor.addChild(root_0, IMPORT18_tree);
                }

                // /home/dcnorris/Documents/DroolsRule.g:73:13: ( WS !)+
                int cnt9 = 0;
                loop9:
                while (true) {
                    int alt9 = 2;
                    int LA9_0 = input.LA(1);
                    if ((LA9_0 == WS)) {
                        alt9 = 1;
                    }

                    switch (alt9) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:73:13: WS !
                        {
                            WS19 = (Token) match(input, WS, FOLLOW_WS_in_importDeclaration172);
                            if (state.failed) {
                                return retval;
                            }
                        }
                        break;

                        default:
                            if (cnt9 >= 1) {
                                break loop9;
                            }
                            if (state.backtracking > 0) {
                                state.failed = true;
                                return retval;
                            }
                            EarlyExitException eee = new EarlyExitException(9, input);
                            throw eee;
                    }
                    cnt9++;
                }

                FQN20 = (Token) match(input, FQN, FOLLOW_FQN_in_importDeclaration176);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    FQN20_tree = (Object) adaptor.create(FQN20);
                    adaptor.addChild(root_0, FQN20_tree);
                }

            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {
                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
            if (state.backtracking > 0) {
                memoize(input, 5, importDeclaration_StartIndex);
            }

        }
        return retval;
    }
    // $ANTLR end "importDeclaration"

    public static class globalDeclaration_return extends ParserRuleReturnScope {

        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "globalDeclaration"
    // /home/dcnorris/Documents/DroolsRule.g:76:1: globalDeclaration : GLOBAL ( WS )+ FQN ( WS )+ ID -> GLOBAL FQN ID ;
    public final DroolsRuleParser.globalDeclaration_return globalDeclaration() throws RecognitionException {
        DroolsRuleParser.globalDeclaration_return retval = new DroolsRuleParser.globalDeclaration_return();
        retval.start = input.LT(1);
        int globalDeclaration_StartIndex = input.index();

        Object root_0 = null;

        Token GLOBAL21 = null;
        Token WS22 = null;
        Token FQN23 = null;
        Token WS24 = null;
        Token ID25 = null;

        Object GLOBAL21_tree = null;
        Object WS22_tree = null;
        Object FQN23_tree = null;
        Object WS24_tree = null;
        Object ID25_tree = null;
        RewriteRuleTokenStream stream_FQN = new RewriteRuleTokenStream(adaptor, "token FQN");
        RewriteRuleTokenStream stream_GLOBAL = new RewriteRuleTokenStream(adaptor, "token GLOBAL");
        RewriteRuleTokenStream stream_ID = new RewriteRuleTokenStream(adaptor, "token ID");
        RewriteRuleTokenStream stream_WS = new RewriteRuleTokenStream(adaptor, "token WS");

        try {
            if (state.backtracking > 0 && alreadyParsedRule(input, 6)) {
                return retval;
            }

            // /home/dcnorris/Documents/DroolsRule.g:77:2: ( GLOBAL ( WS )+ FQN ( WS )+ ID -> GLOBAL FQN ID )
            // /home/dcnorris/Documents/DroolsRule.g:77:4: GLOBAL ( WS )+ FQN ( WS )+ ID
            {
                GLOBAL21 = (Token) match(input, GLOBAL, FOLLOW_GLOBAL_in_globalDeclaration188);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_GLOBAL.add(GLOBAL21);
                }

                // /home/dcnorris/Documents/DroolsRule.g:77:11: ( WS )+
                int cnt10 = 0;
                loop10:
                while (true) {
                    int alt10 = 2;
                    int LA10_0 = input.LA(1);
                    if ((LA10_0 == WS)) {
                        alt10 = 1;
                    }

                    switch (alt10) {
                        case 1: // /home/dcnorris/Documents/DroolsRule.g:77:11: WS
                        {
                            WS22 = (Token) match(input, WS, FOLLOW_WS_in_globalDeclaration190);
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                stream_WS.add(WS22);
                            }

                        }
                        break;

                        default:
                            if (cnt10 >= 1) {
                                break loop10;
                            }
                            if (state.backtracking > 0) {
                                state.failed = true;
                                return retval;
                            }
                            EarlyExitException eee = new EarlyExitException(10, input);
                            throw eee;
                    }
                    cnt10++;
                }

                FQN23 = (Token) match(input, FQN, FOLLOW_FQN_in_globalDeclaration193);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_FQN.add(FQN23);
                }

                // /home/dcnorris/Documents/DroolsRule.g:77:19: ( WS )+
                int cnt11 = 0;
                loop11:
                while (true) {
                    int alt11 = 2;
                    int LA11_0 = input.LA(1);
                    if ((LA11_0 == WS)) {
                        alt11 = 1;
                    }
